src/components/common/AppQuoteComponents/index.scss
@import '~@ergeon/core-components/src/components/variables.scss';

.quote-detail-page {
  .page-break {
    @media print {
      margin-top: $v-24;
      page-break-before: always !important;
    }
  }

  .card {
    background-color: white;
    &.padding-40 {
      @include phone() {
        padding: $h-20;
      }
    }
  }

  .quote-details {
    padding: $v-30;

    @include phone() {
      padding: 0;
      margin: 0 auto;
    }

    &__notification {
      margin-bottom: $h-20;

      @include tablet() {
        margin-bottom: $h-10;
      }
      @include phone() {
        margin-bottom: $h-10;
      }
    }

    &__title {
      align-items: center;
      display: flex;
      justify-content: space-between;

      h4 {
        font-weight: 600;
        margin-right: $h-40;

        > span::before {
          content: ' - ';
        }
      }

      // save pdf button should be always at the top
      > div:nth-child(2) {
        align-self: flex-start;
      }

      @include phone() {
        align-items: flex-start;
        flex-direction: column;
        margin: $v-30 $h-20;

        h4 {
          margin: 0 0 $v-12 0;
          font-size: ($font-label-size * 2) - 2;

          > span::before {
            content: '';
          }

          > span {
            display: flex;
            font-size: $font-regular-size + 2;
            padding-top: $v-6;
          }
        }
      }
    }

    &__lines {
      padding: $v-30;
    }
  }

  $map-min-height: 600px;
  .quote-labels-map {
    height: $map-min-height;
    width: 100%;
    min-height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;

    @include tablet() {
      max-height: calc(#{$map-min-height}/ 1.5);
    }
    @include phone() {
      max-height: calc(#{$map-min-height} / 2);
    }

    &__content {
      opacity: 0;
    }

    .loaderWrapper {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
    }

    .Map {
      height: 100%;
      position: absolute;

      .MapContent {
        &,
        > * {
          min-height: 300px;
          height: 100%;
        }
        // this should prevent gray out tiles on the map
        // https://stackoverflow.com/a/53624818
        div > img {
          position: absolute;
        }
      }

      @include phone() {
        border-radius: unset;
      }
    }
  }

  .quote-details-wrapper {
    width: 100%;
  }

  .quote-details-title {
    font-weight: normal;
  }

  .quote-save-button {
    min-width: $h-120 + $h-20;
    img {
      margin-right: $h-5;
    }

    @include phone() {
      height: $v-24;
      font-size: $font-label-size;
      min-width: $h-80 + $h-20;

      img {
        height: $v-12;
      }
    }
  }

  .quote-license {
    display: flex;
    align-items: center;
    font-style: normal;

    .notification-container {
      position: fixed;
      top: 40%;
      left: $v-20;
      width: 90%;
    }
  }

  .quote-license-number {
    color: $green-2;
    display: inline-block;

    .tooltip {
      margin-left: $h-20;
    }
  }

  .quote-license-icon {
    margin: 2px 0 0 $h-5;
    float: right;
    width: $v-20;

    path:first-child {
      fill: $green;
    }
  }

  .quote-fields {
    padding: $v-12 0;

    .data-row {
      flex-direction: column;
      margin-top: $v-16;
      padding: 0 $h-20;

      .data-row-title {
        font-size: $font-label-size;
        text-align: left;
        text-transform: uppercase;
        line-height: $line-height-label;
        max-width: $h-120;
      }

      .data-row-value {
        font-size: $font-regular-size;
        line-height: $line-height-mobile;
      }

      @include phone() {
        padding: 0;
      }
    }

    .Collapsible {
      padding: $v-12 $h-20;
      border-top: 1px solid $gray-4;

      &:first-child {
        border-bottom: 1px solid $gray-4;
      }

      .h4 {
        font-size: $font-regular-size;
        font-weight: 600;
      }

      .data-row:last-child {
        margin-bottom: $h-20;
      }
    }

    @include phone() {
      padding: unset;
    }
  }
  .quote-fields-wrapper {
    display: flex;

    &__fields {
      width: 70%;

      @include tablet() {
        width: 100%;
      }
    }

    &__images,
    &__staff-contacts {
      width: 30%;

      @include tablet() {
        width: 100%;
      }
    }

    &__images {
      align-items: center;
      justify-content: center;
    }

    @include tablet() {
      display: block;
    }
  }

  $thumbnail-width: 150px;
  .quote-project-images {
    float: right;

    .ImageGallery-container {
      width: $v-124 * 2;

      .image-gallery-thumb {
        .image-loader__image {
          height: 150px;
        }
      }
    }

    @include tablet() {
      float: none;
      margin-top: $v-16;

      .ImageGallery-container {
        width: 100%;
      }
    }

    @include phone() {
      float: none;
      width: 100%;
      padding-bottom: $v-16;
      margin-bottom: $v-12;
    }

    &__legend {
      display: flex;

      @include phone() {
        margin-bottom: $v-6;
      }

      span {
        font-size: $font-mobile-size;
      }
    }
  }

  .quote-line {
    page-break-inside: avoid;
    border-bottom: 1px solid $gray-5;
    padding-bottom: $v-24;
    margin-top: $v-24;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    @include phone() {
      flex-direction: column;
    }
    &__title {
      display: flex;
    }
  }

  .quote-line-preview {
    margin-top: 0;
    @include tablet() {
      margin-bottom: $v-12;
    }
    @include phone() {
      margin-bottom: $v-12;
    }
    @media print {
      margin-right: $h-20;
    }
  }

  .quote-line-description {
    width: 100%;
    word-break: break-word;
    white-space: pre-line;

    &__tags {
      margin: $v-6 1px;
      display: flex;
      align-items: center;

      .tags {
        &__item {
          padding: 0 $h-10;
          margin: 0 $h-5 $h-5 0;
        }
      }
    }
  }

  .quote-line-description__pdf {
    width: 85%;
  }

  .quote-line-price {
    min-width: $h-120;
    text-align: right;
  }

  .quote-line-price__pdf {
    min-width: 15%;
  }

  .quote-line-price-total-price,
  .quote-line-price-percentage {
    line-height: $v-16;
    font-size: $font-label-size;
    font-style: italic;
  }

  .quote-line-images {
    width: 100%;
  }

  .change-order-quote-price {
    color: $black-1;
    font-size: $v-16;
  }

  .change-order-total-previous-price {
    color: $black-3;
    font-size: $v-16;
  }

  .change-order-total-project-price {
    font-size: $v-20;
  }

  .total-price-noteless {
    position: relative;
    margin: $v-24 $h-20 0;
    text-align: right;
  }

  .total-price {
    @extend .total-price-noteless;
    &:after {
      content: '*';
      color: $red;
      position: absolute;
      top: -6px;
      font-size: $font-label-size;
    }
  }

  .asterisk {
    color: $red;
    margin-left: $h-5;
  }

  .asterisk-notes {
    text-align: right;
    font-size: $font-label-size;
    margin: 0 $h-20;
  }

  .mobile-length {
    display: none;

    @include phone() {
      display: block;
    }
  }

  .desktop-length {
    display: block;

    @include phone() {
      display: none;
    }
  }

  .quote-notes {
    p,
    ul,
    ol {
      max-width: 720px;
    }
    h4 {
      margin-bottom: $v-12;
    }
    @include phone() {
      padding: $h-20;
      margin: 0 auto;
    }
  }

  .quote-projects-notes {
    p {
      margin-bottom: $v-12;
    }
    // TODO: reuse ul, li style from core-components
    ul {
      padding-left: $v-24;
      list-style: none;

      > li {
        margin-bottom: $v-12;
        position: relative;
        &:before {
          content: '';
          width: $v-12;
          height: $v-12;
          position: absolute;
          left: (-$v-24 / 2 - $v-16 / 2);
          top: ($v-24 / 2 - $v-16 / 2);
          background-repeat: no-repeat;
          background-image: url('../../../assets/icon-check-mark.svg');
          background-size: $v-12 $v-12;
          display: block;
        }
      }
    }
  }

  .button-back {
    padding-left: 0 !important;
    padding-right: $h-10;
    &:hover {
      background-color: $gray-5 !important;
    }
  }

  .gray-arrow-fill {
    width: 24px;
    height: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
    svg {
      width: 12px;
      height: 12px;
      path {
        fill: $gray-1;
      }
    }
  }

  .additional-approvers-list {
    margin-top: $v-20;
    width: 100%;
    .additional-approvers-list-item td {
      padding: $h-10 $v-12;
      border-bottom: 1px solid #ccc;
    }
    .additional-approvers-list-item:last-child td {
      border-bottom: 0;
    }
    .additional-approvers-list-item-name {
      font-weight: bold;
    }
  }
}

@media print {
  * {
    /*
      The following lines forces browser to showcase background-images.
      Without it, the Ergeon logo won't be visible. We can change logo
      implementation to be an image and remove it in future.
    */
    -webkit-print-color-adjust: exact !important;
    color-adjust: exact !important;
  }
  // US standard size is A4 (8-1/4 x 11-3/4 in	210 x 297 mm)
  // This will prevent messing up with other non us standard sizes and default the print view to it
  @page {
    size: a4;
  }

  body {
    zoom: 90%;
  }

  img {
    max-width: 100% !important;
    page-break-inside: avoid;
  }

  .card {
    border: none !important;
    padding: 0;
    &.padding-40 {
      padding-bottom: 0 !important;
    }
  }

  // properly set quote and quote-line images grid and sizes
  .quote-line-images {
    .two-columns {
      grid-template-columns: repeat(auto-fit, minmax(80mm, 1fr));
    }
    .image-loader__wrapper {
      .image-loader__image {
        object-position: center center;
      }
      img {
        height: 40mm;
        width: 100mm;
      }
    }
  }

  .customer-app-layout {
    margin-top: 0;
    padding: 0;
  }

  .wrapper-980 {
    padding-left: 0;
    padding-right: 0;
    .phone-number {
      margin-right: 0;
    }
  }

  .quote-details {
    padding: 0;
    margin-bottom: 0 !important;
  }

  .quote-details__description {
    position: relative !important;
    margin: 0 !important;
    padding: 0 !important;
  }

  .quote-labels-map {
    width: 100% !important;
    position: relative !important;
    zoom: 65%; // BEWARE: this will fix a really weird bug where the lines or polygons are not visible, please do not remove or increase
  }

  .quote-line-description__tags {
    display: none !important;
  }

  .customer-app-data-row > div:first-child {
    text-align: right;
    margin-right: $h-10;
  }

  .quote-fields {
    .quote-fields-wrapper__fields {
      width: 100% !important;
    }
  }
}

